27/08/09:
  - Fixed chapters and text tracks handling for iTunes. Using the -ipd option in MP4Box should fix all subtitles tracks.
    When adding a track (including subtitle), it is now possible to override the track layout. For example:
      MP4Box -add test.srt:layout=0x20x0x-1 test.mp4
     will set the track box to be max width of the file tracks, 20 pixels height, translated by 0 pixels left and aligned to the bottom (max height - 20)
    To add a chapter track, you simply have to add ":chap" in the -add command. 
  - Added modular compilation of most libgpac features. See configure or include/gpac/configuration
  - Fixed streaming interoperability with Live555 
  - More fixed and speed improvement in VRML/BIFS scripting
  - Added support for PBuffers on Win32/DirectX

02/12/08: GPAC 0.4.5
  - Support for AC3 in ISO Media, AC3 decoder (liba52) RTP hinting
  - Support for MediaAccessEvent (spec still under development ??)
  - Added support for user extensions (global class only) in JS through modules - cf gpac_js for sample code.
  - Initial support for 3GPP DIMS (file creation and dumping + playback)
      * Currently only SVG as overlay is supported for DIMS files, we are not sure about the specification on this topic
      * RTP hinting /playback is not supported yet      
  - Support for SVG foreignObject - all GPAC supported content can be played in a foreign object
  - Added automatic switch between 2D and 3D context for VRML/BIFS Inline node 
  - Basic support for DCCI queries: 
    * the DCCI object is exposed in scripts as 'DCCIRoot'
    * the related document can be specified in GPAC configuration file in the [General] section with the 'EnvironmentFile' key 
      pointing to an XML file to use as the ontology context
    * DCCI's propertyFilters are NOT supported yet.   
  - Added support for YCbCr OpenGL texturing (only tested with GL_MESA_ycbcr_texture)
  - Fixed bugs in OSS audio (100% CPU usage when no audio to play) and ALSA (broken playback)